microservices-demo/base/mongodb_exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-exporter
  namespace: application
  labels:
    app.kubernetes.io/name: mongodb-exporter
    app.kubernetes.io/instance: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb-exporter
      app.kubernetes.io/instance: microservices
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongodb-exporter
        app.kubernetes.io/instance: microservices
    spec:
      containers:
      - name: exporter
        image: percona/mongodb_exporter:0.39
        args:
        - --mongodb.uri=mongodb://root:$(MONGODB_PASSWORD)@microservices-mongodb:27017
        - --collect-all
        - --compatible-mode
        ports:
        - name: prometheus
          containerPort: 9216
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-exporter
  namespace: "application"
  labels:
    app.kubernetes.io/name: svc-mongo-exporter
    app.kubernetes.io/instance: microservices
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: prometheus
    protocol: TCP
    port: 9216
    targetPort: prometheus
  selector:
    app.kubernetes.io/name: mongodb-exporter
    app.kubernetes.io/instance: microservices
